# thoughtfulai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  explanation.txt  my_solution.py  pyproject.toml  solution.txt  the_ask.txt
.github/workflows/: ci.yml
routing_cycle_detector/: core.py  graph.py  streaming.py
tests/: conftest.py  test_cli.py  test_core.py  test_graph.py  test_streaming.py
